--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,6 +21,11 @@
 		font-size: 13pt;
 		line-height: 2em;
 	}
+        
+        th 
+        {
+                text-align: left;
+        }
 
 	h1,h2,h3,h4,h5,h6
 	{
@@ -308,6 +313,7 @@
 		overflow: hidden;
 		border-top: 1px solid #dbdbdb;
 	}
+        
 
 /*********************************************************************************/
 /* Footer                                                                        */
