menu navegacion OK en todo

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -286,7 +286,7 @@
 	#header
 	{
 		position: relative;
-		background: #ddd url(../images/header.jpg) no-repeat center;
+		background: #ddd url(../images/header3.jpg) no-repeat center;
 		background-size: cover;
 	}
 
