--- a/web/css/skel-noscript.css
+++ b/web/css/skel-noscript.css
@@ -61,6 +61,7 @@
 		.\-5u { margin-left: 41.6666666667% }
 		.\-4u { margin-left: 33.3333333333% }
 		.\-3u { margin-left: 25% }
+                .\-3u { margin-left: 25% }
 		.\-3ur { margin-right: 25% }
 		.\-2u { margin-left: 16.6666666667% }
 		.\-1u { margin-left: 8.3333333333% }
